[project]
name = "mylaw-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "lxml>=6.0.1",
    "mcp[cli]>=1.13.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
    "xmltodict>=0.14.2",
]
